<!--
  ~ Copyright 2017 Kaushik N. Sanji
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Invitation</string>
    <string name="title_text">Lalbagh Botanical Garden</string>
    <string name="location_text">Mavalli, Bengaluru, Karnataka 560004</string>
    <string name="access_time_text">6AM - 6PM, everyday</string>
    <string name="website_text">http://www.horticulture.kar.nic.in/lalbagh.htm#The%20Garden</string>
    <string name="visit_time_text">People typically spend nearly two hours here</string>
    <string name="place_description">
        "Lalbagh or Lalbagh Botanical Gardens, meaning The Red Garden in English, is a well known botanical garden in southern Bengaluru, India. The main attraction is the Glass House that is modeled to resemble London's Crystal Palace, and this is where the major flower decorations are done for the occasion of Republic Day and Independence Day of India. It also hosts Mango festival once in every year. On the other side, Lalbagh is also famous for Pokémon goers as this is a major Pokéfarm too with lots of Pokéstops, and a Pokégym centered at the Glass House."
    </string>
    <string name="invite_button">Invite Friends</string>
</resources>
