<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Kaushik N. Sanji
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaushiknsanji.invitation.MainActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lalbagh_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/lalbagh_night_small"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lalbagh_image"
            android:background="@color/colorPrimary"
            app:fontFamily="serif"
            android:paddingStart="@dimen/title_text_padding_left"
            android:paddingLeft="@dimen/title_text_padding_left"
            android:paddingTop="@dimen/title_text_vertical_padding"
            android:paddingBottom="@dimen/title_text_vertical_padding"
            android:text="@string/title_text"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"/>

        <TableLayout
            android:id="@+id/location_details_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text"
            android:layout_margin="@dimen/location_details_table_margin"
            android:stretchColumns="1">

            <TableRow>
                <ImageButton
                    android:id="@+id/location_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/table_details_column_icon_padding"
                    android:src="@drawable/ic_place_black"/>

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    app:fontFamily="sans-serif"
                    android:paddingStart="@dimen/table_details_column_text_padding_left"
                    android:paddingLeft="@dimen/table_details_column_text_padding_left"
                    android:text="@string/location_text"
                    android:onClick="onClickOfLocation"/>
            </TableRow>

            <TableRow>
                <ImageButton
                    android:id="@+id/access_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/table_details_column_icon_padding"
                    android:src="@drawable/ic_access_time"/>

                <TextView
                    android:id="@+id/access_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/table_details_column_text_padding_left"
                    android:paddingLeft="@dimen/table_details_column_text_padding_left"
                    android:text="@string/access_time_text"/>
            </TableRow>

            <TableRow>
                <ImageButton
                    android:id="@+id/public_black_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/table_details_column_icon_padding"
                    android:src="@drawable/ic_public_black"/>

                <TextView
                    android:id="@+id/website_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:autoLink="web"
                    android:paddingStart="@dimen/table_details_column_text_padding_left"
                    android:paddingLeft="@dimen/table_details_column_text_padding_left"
                    android:text="@string/website_text"/>
            </TableRow>

            <TableRow>
                <ImageButton
                    android:id="@+id/visit_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/table_details_column_icon_padding"
                    android:src="@drawable/ic_stop_watch"/>

                <TextView
                    android:id="@+id/visit_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/table_details_column_text_padding_left"
                    android:paddingLeft="@dimen/table_details_column_text_padding_left"
                    android:text="@string/visit_time_text"/>
            </TableRow>

        </TableLayout>

        <View
            android:id="@+id/info_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/location_details_table"
            android:layout_marginStart="@dimen/info_divider_horizontal_margin"
            android:layout_marginLeft="@dimen/info_divider_horizontal_margin"
            android:layout_marginEnd="@dimen/info_divider_horizontal_margin"
            android:layout_marginRight="@dimen/info_divider_horizontal_margin"
            android:layout_marginBottom="@dimen/info_divider_margin_bottom"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_divider"
            android:layout_marginBottom="@dimen/description_text_margin_bottom"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="@dimen/description_text_horizontal_padding"
            android:paddingLeft="@dimen/description_text_horizontal_padding"
            android:paddingEnd="@dimen/description_text_horizontal_padding"
            android:paddingRight="@dimen/description_text_horizontal_padding"
            android:text="@string/place_description"/>

        <Button
            android:id="@+id/button_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/button_invite_margin_bottom"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/button_invite_horizontal_padding"
            android:paddingLeft="@dimen/button_invite_horizontal_padding"
            android:paddingEnd="@dimen/button_invite_horizontal_padding"
            android:paddingRight="@dimen/button_invite_horizontal_padding"
            android:text="@string/invite_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_invite_text_size" />

    </RelativeLayout>
</ScrollView>